sort.basic.comb.AlgCombSort11.scala.error
Erreur de compilation :
AlgCombSort11:13: error: ')' expected but 'else' found.
       else if(ecart=10) {
       ^